--- a/cstaff_login.html
+++ b/cstaff_login.html
@@ -5,7 +5,7 @@
 
     <title>GAssets</title>
   </head>
-  <body>
+  <body class="back1">
     
     <div class="bg"></div>
          <h1 class="head">
