--- a/demoo.html
+++ b/demoo.html
@@ -1,41 +1,83 @@
-<htmt>
-    <head>
-        <title>Gassets</title>
-        <link href="index_styles.css" type="text/css" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-    </head>
-    <body >
-      <div class="bg">
-        <div class="head">
+        .login-container {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 300px;
+        }
 
-        </div>
-        <div class="next">
-        </div>
-        <div>
-            <a class="tag" href="admin_login.html" >ADMIN</a>
-        </div>
-        <div class="next1">
-        </div>
-        <div class="staff1">
-        </div>
-        <div class="staff2">
-        </div>
-        <div class="staff3">
-        </div>
+        .login-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
 
-        <div>
-            <a class="tag1" href="user_login.html" >USER</a>
-        </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn">User</button>
-            <div class="dropdown-content">
-              <a href="#">Admmin</a>
-              <a href="#">Student</a>
-              <a href="#">Printing staff</a>
-              <a href="#">Store staff</a>
-              <a href="#">Canteen staff</a>
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .form-group input[type="text"],
+        .form-group input[type="password"] {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        .form-group button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            background-color: #007bff;
+            color: #fff;
+            cursor: pointer;
+        }
+
+        .form-group button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form action="#" method="POST">
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="email" placeholder="example@email.com">
             </div>
-          </div>
-    </body>
-</htmt>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <button type="submit">Sign In</button>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
