--- a/user_login.html
+++ b/user_login.html
@@ -5,7 +5,7 @@
 
     <title>GAssets</title>
   </head>
-  <body>
+  <body class="back1">
     
     <div class="bg"></div>
          <h1 class="head">
@@ -26,7 +26,7 @@
         <div class="next">
         </div>
         <div>
-            <a class="tag3" href=#"" >Sign In</a>
+            <a class="tag3" href="main_page.html" >Sign In</a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
